--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,16 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <section class="form-container">
+        <h2>Credit Card</h2>
+        <form class="validator-form-container">
+          <input id="Username" class="input" type="text" placeholder="Username"/>
+          <input id="numbertdc" class="input" type="number" placeholder="Número de TDC"/>
+          <button class="button">Validar</button>
+        </form>
+      </section>
+    </main>
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
