--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,9 @@
         <h2>Credit Card</h2>
         <form class="validator-form-container" id='form'>
           <input id="userName" class="input" type="text" placeholder="Username"/>
-          <input id="numberTdc" class="input" type="number" placeholder="Número de TDC"/>
+          <input id="numberTdc" class="input" type="text" placeholder="Número de TDC"/>
           <input id="buttonForm" value="Validar" class="button" required="required" type="submit"/>
         </form>
-        <div id="result"></div>
       </section>
     </main>
     <footer></footer>
