cambios para merge

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Tarjeta de crédito válida</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header></header>
-    <main>
+    <main class="form">
       <section class="form-container">
         <h2>Credit Card</h2>
         <form class="validator-form-container">
-          <input id="Username" class="input" type="text" placeholder="Username"/>
-          <input id="numbertdc" class="input" type="text" placeholder="Número de TDC"/>
+          <input
+            id="Username"
+            class="input"
+            type="text"
+            placeholder="Username"
+          />
+          <input
+            id="numbertdc"
+            class="input"
+            type="text"
+            placeholder="Número de TDC"
+          />
           <button class="button">Validar</button>
         </form>
       </section>
