--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,20 @@
   </head>
   <body>
     <header></header>
-    <main class="form">
-      <section class="form-container">
-        <h2>Credit Card</h2>
-        <form class="validator-form-container" id='form'>
-          <input id="userName" class="input" type="text" placeholder="Username"/>
-          <input id="numberTdc" class="input" type="text" placeholder="Número de TDC"/>
-          <input id="buttonForm" value="Validar" class="button" required="required" type="submit"/>
-        </form>
+    <main>
+      <section class="form">
+        <div class="form-container">
+          <form class="validator-form-container" id='form'>
+            <h2>Credit Card</h2>
+            <input id="userName" class="input" type="text" placeholder="Username"/>
+            <input id="numberTdc" class="input" type="text" placeholder="Número de TDC"/>
+            <input id="buttonForm" value="Validar" class="button" required="required" type="submit"/>
+          </form>
+          <h1 id='invalidCard'></h1>
+        </div>
+      </section>
+      <section id="validCard">
+        <h1>Valida</h1>
       </section>
     </main>
     <footer></footer>
