--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <section class="form">
         <div class="form-container">
           <form class="validator-form-container" id='form'>
-            <h2>Credit Card</h2>
+            <h2>Dupa Card</h2>
             <input id="userName" class="input" type="text" placeholder="Username"/>
             <input id="numberTdc" class="input" type="text" placeholder="Número de TDC"/>
             <input id="buttonForm" value="Validar" class="button" required="required" type="submit"/>
