--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,12 @@
         </div>
       </section>
       <section id="validCard">
-        <h1>Valida</h1>
+        <div class="valid-container">
+          <div class="valid-img-container">
+            <img src="" alt="Valid Card">
+          </div>
+          <h1 id="validCardMessage"></h1>
+        </div>
       </section>
     </main>
     <footer></footer>
