images, layout and styles to the header

--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,20 @@
   </head>
   <body>
     <header>
-      <img src="assets/logo1.png" alt="Logo DupaPay">
+      <div class="logo-container">
+        <img src="assets/logo.png" alt="Logo DupaPay">
+      </div>
     </header>
     <main>
       <section class="form">
         <div class="form-container">
           <form class="validator-form-container" id='form'>
-            <h2>Dupa Card</h2>
+            <h1>Dupa Card</h1>
             <input id="userName" class="input" required="required" type="text" placeholder="Username"/>
             <input id="numberTdc" class="input" required="required" type="text" placeholder="Número de TDC"/>
             <input id="buttonForm" value="Validar" class="button" required="required" type="submit"/>
           </form>
-          <h1 id='invalidCard'></h1>
+          <h3 id='invalidCard'></h3>
         </div>
       </section>
       <section id="validCard">
@@ -26,7 +28,7 @@
           <div class="valid-img-container">
             <img src="assets/check.png" alt="Valid Card">
           </div>
-          <h1 id="validCardMessage"></h1>
+          <h3 id="validCardMessage"></h3>
         </div>
       </section>
     </main>
