--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
     <main>
       <section class="form">
         <div class="form-container">
-          <form class="validator-form-container" id='form'>
+          <form class="validator-form-container" id="form">
             <h1>Dupa Card</h1>
             <input id="userName" class="input" required="required" type="text" placeholder="Username"/>
             <input id="numberTdc" class="input" required="required" type="text" placeholder="Número de TDC"/>
             <input id="buttonForm" value="Validar" class="button" required="required" type="submit"/>
           </form>
-          <h3 id='invalidCard'></h3>
+          <h3 id="invalidCard"></h3>
         </div>
       </section>
       <section id="validCard">
