--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </main>
     <footer>
       <div class="barra-inferior">
-        <div class="barra-inferior">
+        <div class="contact">
           <a href="#">Contacto</a>
           <a href="#">Preguntas frecuentes</a>
         </div>
