--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tarjeta de crédito válida</title>
+    <title>DupaPay</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,8 +16,8 @@
         <div class="form-container">
           <form class="validator-form-container" id="form">
             <h1>Dupa Card</h1>
-            <input id="userName" class="input" required="required" type="email" placeholder="Correo electrónico afiliado"/>
-            <input id="numberTdc" class="input" required="required" type="text" minlength="10" maxlength="18" placeholder="N° Tarjeta de crédito"/>
+            <input id="userMail" class="input" required="required" type="email" placeholder="Correo electrónico afiliado"/>
+            <input id="numberTdc" class="input" autocomplete="off" required="required" type="text" minlength="10" maxlength="18" placeholder="N° Tarjeta de crédito"/>
             <input id="buttonForm" value="Pagar" class="button" required="required" type="submit"/>
           </form>
           <h3 id="invalidCard"></h3>
@@ -33,12 +33,12 @@
       </section>
     </main>
     <footer>
-      <div class="barra-inferior">
+      <div class="bottom-bar">
         <div class="contact">
           <a href="#">Contacto</a>
           <a href="#">Preguntas frecuentes</a>
         </div>
-        <div class="icono-social">
+        <div class="socialmedia-icons">
           <img src="assets/facebook.png" alt="icono facebook" />
           <img src="assets/instagram.png" alt="icono instagram" />
           <img src="assets/twitter.png" alt="icono twitter" />
