--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,11 @@
         <div class="form-container">
           <form class="validator-form-container">
             <h1>Dupa Card</h1>
+            <div class="inputs-container">
             <input id="userMail" class="input" required="required" type="email" placeholder="Correo electrónico afiliado"/>
             <input id="numberTdc" class="input" autocomplete="off" required="required" type="text" minlength="10" maxlength="18" placeholder="N° Tarjeta de crédito"/>
             <input id="buttonForm" value="Pagar" class="button" required="required" type="submit"/>
+            </div>
           </form>
           <h3 id="invalidCard"></h3>
         </div>
