Testing media queries

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>DupaPay</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="assets/faviconDupaPay.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -17,33 +18,20 @@
         <div class="option-container">
           <div class="user-selection-container">
             <img src="assets/imagen2.png" alt="Afiliado" />
-            <input
-              type="button"
-              class="buttonSelect"
-              value="Ingresar como afiliado"
-              id="affiliateButton"
-            />
+            <input type="button" class="buttonSelect" value="Ingresar como afiliado" id="affiliateButton" />
           </div>
           <div class="user-selection-container">
             <img src="assets/image1.png" alt="Afiliar" />
-            <input
-              id="signUpButton"
-              type="button"
-              class="buttonSelect"
-              value="Afiliar tarjeta de credito"
-            />
+            <input id="signUpButton" type="button" class="buttonSelect" value="Afiliar tarjeta de credito" />
           </div>
         </div>
-        <!-- <div class="information-box"> -->
+        <div class="information-box">
           <h1>Recuerda que pagando con DupaPay acumulas puntos que puedes canjear por tiquetes aéreos</h1>
-        <!-- </div> -->
+        </div>
       </section>
       <section class="homeButton" id="notFoundView">
         <div class="not-found-page">
-          <img
-            src="assets/error404.png"
-            alt="Error404"
-          />
+          <img src="assets/error404.png" alt="Error404" />
           <h1>Página no encontrada</h1>
         </div>
         <input id="returnButton" type="button" value="Volver" class="button" />
@@ -70,7 +58,6 @@
         </div>
       </section>
     </main>
-
     <footer>
       <div class="lower-bar">
         <div>
