media queries changes

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="information-box">
-          <h1>Recuerda que pagando con DupaPay acumulas puntos que puedes canjear por tiquetes aéreos</h1>
+          <h1>Recuerda que pagando con DupaPay acumulas puntos </br>que puedes canjear por tiquetes aéreos</h1>
         </div>
       </section>
       <section class="homeButton" id="notFoundView">
